Changes from feedback.
- Copyright dates fixed
- IllegalCallerException thrown for no caller frame, and associated
javadoc changes
- test changed to look for IllegalCallerException thrown.